--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,6 +8,7 @@
     tools:context=".SettingsActivity">
 
     <TextView
+        android:id="@+id/text_title_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
@@ -16,7 +17,26 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         app:layout_constraintTop_toTopOf="parent" 
         android:text="@string/title_settings"/>
-    
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        app:layout_constraintTop_toBottomOf="@id/text_title_settings">
+
+        <EditText
+            android:id="@+id/edit_net_income"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/net_income_hint"
+            android:inputType="numberDecimal"/>
+
+    </android.support.design.widget.TextInputLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -27,8 +47,8 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <Button
-            style="@style/Widget.AppCompat.Button.Colored"
+        <Button style="@style/Widget.AppCompat.Button.Colored"
+            android:id="@+id/btn_settings_save"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -36,6 +56,7 @@
             android:text="@string/save_button" />
 
         <Button style="@style/Widget.AppCompat.Button.Colored"
+            android:id="@+id/btn_settings_cancel"
             android:layout_weight="6"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
