--- a/app/src/main/res/layout/merge_expense_form.xml
+++ b/app/src/main/res/layout/merge_expense_form.xml
@@ -1,11 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <TextView
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/text_layout_expense_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="expense form"/>
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        app:layout_constraintTop_toTopOf="parent">
 
-</merge>
+        <EditText
+            android:id="@+id/edit_expense_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/net_income_hint"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:inputType="text"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/text_layout_expense_cost"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        app:layout_constraintTop_toBottomOf="@+id/text_layout_expense_name">
+
+        <EditText
+            android:id="@+id/edit_expense_cost"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="@string/net_income_hint"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:inputType="numberDecimal"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+    <Spinner
+        android:id="@+id/spinner_expense_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        app:layout_constraintTop_toBottomOf="@+id/text_layout_expense_cost">
+
+    </Spinner>
+
+</android.support.constraint.ConstraintLayout>
