--- a/app/src/main/res/layout/merge_bill_form.xml
+++ b/app/src/main/res/layout/merge_bill_form.xml
@@ -8,7 +8,6 @@
         android:id="@+id/text_layout_bill_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -17,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/net_income_hint"
+            android:hint="@string/edit_bill_name_hint"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:inputType="text"/>
 
@@ -27,7 +26,6 @@
         android:id="@+id/text_layout_bill_cost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         app:layout_constraintTop_toBottomOf="@+id/text_layout_bill_name">
 
@@ -36,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/net_income_hint"
+            android:hint="@string/edit_bill_cost_hint"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:inputType="numberDecimal"/>
 
@@ -47,8 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/fontSizeMedium"
-        android:text="Bill due"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:text="@string/text_bill_due"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         app:layout_constraintTop_toBottomOf="@+id/text_layout_bill_cost"
         app:layout_constraintBottom_toTopOf="@+id/date_picker_bill_due"/>
