--- a/app/src/main/res/layout/merge_expense_form.xml
+++ b/app/src/main/res/layout/merge_expense_form.xml
@@ -8,7 +8,6 @@
         android:id="@+id/text_layout_expense_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -17,37 +16,41 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/net_income_hint"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:hint="@string/edit_expense_name_hint"
             android:inputType="text"/>
 
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/text_layout_expense_cost"
+        android:id="@+id/text_layout_expense_limit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         app:layout_constraintTop_toBottomOf="@+id/text_layout_expense_name">
 
         <EditText
-            android:id="@+id/edit_expense_cost"
+            android:id="@+id/edit_expense_limit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/net_income_hint"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:hint="@string/edit_expense_limit_hint"
             android:inputType="numberDecimal"/>
 
     </android.support.design.widget.TextInputLayout>
+
+    <TextView
+        android:id="@+id/text_expense_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/text_expense_type"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        app:layout_constraintTop_toBottomOf="@+id/text_layout_expense_limit"/>
 
     <Spinner
         android:id="@+id/spinner_expense_type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        app:layout_constraintTop_toBottomOf="@+id/text_layout_expense_cost">
+        app:layout_constraintTop_toBottomOf="@+id/text_expense_type">
 
     </Spinner>
 
