--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/net_income_hint"
+            android:hint="@string/edit_net_income_hint"
             android:inputType="numberDecimal"/>
 
     </android.support.design.widget.TextInputLayout>
