--- a/app/src/main/res/layout/fragment_bills.xml
+++ b/app/src/main/res/layout/fragment_bills.xml
@@ -9,7 +9,7 @@
 
     <TextView
         android:id="@+id/section_label"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
@@ -20,5 +20,14 @@
         app:layout_constraintTop_toTopOf="@+id/constraintLayout"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
+
+    <ListView
+        android:id="@+id/lv_bills"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/section_label"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+    </ListView>
 
 </android.support.constraint.ConstraintLayout>
