--- a/app/src/main/res/layout/fragment_expenses.xml
+++ b/app/src/main/res/layout/fragment_expenses.xml
@@ -21,4 +21,13 @@
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
 
+    <ListView
+        android:id="@+id/lv_expenses"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/section_label"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+    </ListView>
+
 </android.support.constraint.ConstraintLayout>
