--- a/app/src/main/res/layout/listview_expense_item.xml
+++ b/app/src/main/res/layout/listview_expense_item.xml
@@ -24,9 +24,11 @@
         android:id="@+id/btn_expense_spend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Spend"
+        android:text="@string/spend_button"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -54,6 +56,8 @@
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:paddingBottom="16dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         style="@android:style/Widget.ProgressBar.Horizontal"
         app:layout_constraintTop_toBottomOf="@+id/tv_expense_status"/>
 
