--- a/app/src/main/res/layout/alert_dialog_expense_spend.xml
+++ b/app/src/main/res/layout/alert_dialog_expense_spend.xml
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
-        android:id="@+id/et_alert_dialog_expense"
+        android:id="@+id/et_alert_dialog_expense_spend"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:imeOptions="actionDone"
@@ -22,20 +22,22 @@
         android:hint="@string/ad_expense_spend_et"
         app:layout_constraintTop_toBottomOf="@+id/alert_dialog_expense_spend_title"/>
 
-    <Button
-        android:id="@+id/btn_alert_dialog_expense_spend_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/save_button"
-        app:layout_constraintTop_toBottomOf="@+id/et_alert_dialog_expense"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <Button
+    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:id="@+id/btn_alert_dialog_expense_spend_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/cancel_button"
-        app:layout_constraintTop_toBottomOf="@+id/et_alert_dialog_expense"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:textSize="@dimen/fontSizeSmall"
+        app:layout_constraintTop_toBottomOf="@+id/et_alert_dialog_expense_spend"
+        app:layout_constraintEnd_toStartOf="@+id/btn_alert_dialog_expense_spend_save"/>
+
+    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:id="@+id/btn_alert_dialog_expense_spend_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save_button"
+        android:textSize="@dimen/fontSizeSmall"
+        app:layout_constraintTop_toBottomOf="@+id/et_alert_dialog_expense_spend"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
